[gd_scene load_steps=17 format=3 uid="uid://jlfslyfbhid5"]

[ext_resource type="Script" path="res://logic/paddle.gd" id="1"]
[ext_resource type="Script" path="res://pong.gd" id="1_knvrg"]
[ext_resource type="Texture2D" uid="uid://dvrb8efddt0aa" path="res://paddle.png" id="2"]
[ext_resource type="Script" path="res://logic/ball.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://clowikjgl4yq1" path="res://ball.png" id="5"]
[ext_resource type="Texture2D" uid="uid://drgpdyyomyqpl" path="res://separator.png" id="6"]
[ext_resource type="Script" path="res://logic/wall.gd" id="7"]
[ext_resource type="Script" path="res://logic/ceiling_floor.gd" id="8"]
[ext_resource type="Script" path="res://logic/rightWall.gd" id="8_gw3bj"]
[ext_resource type="Script" path="res://Camera2D.gd" id="9_l3e0y"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(8, 32)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(20, 400)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(640, 20)

[sub_resource type="LabelSettings" id="LabelSettings_httxx"]
font_size = 42

[sub_resource type="LabelSettings" id="LabelSettings_7yt2g"]
font_size = 42

[node name="Pong" type="Node2D"]
script = ExtResource("1_knvrg")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 400.0
color = Color(0.141176, 0.152941, 0.164706, 1)

[node name="Left" type="Area2D" parent="."]
modulate = Color(0, 1, 1, 1)
position = Vector2(67.6285, 192.594)
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="Left"]
texture = ExtResource("2")

[node name="Collision" type="CollisionShape2D" parent="Left"]
shape = SubResource("1")

[node name="Right" type="Area2D" parent="."]
modulate = Color(1, 0, 1, 1)
position = Vector2(563.815, 188.919)
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="Right"]
texture = ExtResource("2")

[node name="Collision" type="CollisionShape2D" parent="Right"]
shape = SubResource("1")

[node name="Ball" type="Area2D" parent="."]
position = Vector2(320.5, 191.124)
script = ExtResource("4")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
texture = ExtResource("5")

[node name="Collision" type="CollisionShape2D" parent="Ball"]
shape = SubResource("2")

[node name="Separator" type="Sprite2D" parent="."]
position = Vector2(320, 200)
texture = ExtResource("6")

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2(-10, 200)
script = ExtResource("7")

[node name="Collision" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("3")

[node name="RightWall" type="Area2D" parent="."]
position = Vector2(650, 200)
script = ExtResource("8_gw3bj")

[node name="Collision" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("3")

[node name="Ceiling" type="Area2D" parent="."]
position = Vector2(320, -10)
script = ExtResource("8")

[node name="Collision" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource("4")

[node name="Floor" type="Area2D" parent="."]
position = Vector2(320, 410)
script = ExtResource("8")
_bounce_direction = -1

[node name="Collision" type="CollisionShape2D" parent="Floor"]
shape = SubResource("4")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(320, 200)
script = ExtResource("9_l3e0y")

[node name="LeftLabel" type="Label" parent="."]
offset_left = 105.0
offset_right = 300.0
offset_bottom = 193.0
text = "0"
label_settings = SubResource("LabelSettings_httxx")
horizontal_alignment = 2

[node name="RightLabl" type="Label" parent="."]
offset_left = 340.0
offset_right = 506.0
offset_bottom = 191.0
text = "0"
label_settings = SubResource("LabelSettings_7yt2g")

[connection signal="area_entered" from="Left" to="Left" method="_on_area_entered"]
[connection signal="area_entered" from="Right" to="Right" method="_on_area_entered"]
[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_on_area_entered"]
[connection signal="rightPointUp" from="LeftWall" to="." method="_on_left_wall_right_point_up"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_on_area_entered"]
[connection signal="leftPointUp" from="RightWall" to="." method="_on_right_wall_left_point_up"]
[connection signal="area_entered" from="Ceiling" to="Ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="Floor" to="Floor" method="_on_area_entered"]
